# box-with-tri-hole

./: CLAUDE.md  README.md
.claude/: -home-wink-data-prgs-3dprinting-box-with-tri-hole  074c6334-eff9-424e-9b3b-5457c0129e92.jsonl  1bbaa8c4-e7d9-4bf1-b931-7f294b2cbed8.jsonl  442dc509-ccbe-40d8-8467-ea14e77333de.jsonl  4cbfe9ba-5623-4017-bc3e-31e1fbeedf78.jsonl  5c7098ec-4b23-495c-8ebe-2abf5a93bf2e.jsonl  636aa10b-461d-47b9-97b3-7b6c8612ad6c.jsonl  67adeeba-8282-42d1-8752-366119b5bd2e.jsonl  68079ffe-9b23-4fe2-adfc-7fc45c2bddca.jsonl  6c515248-e198-4c16-9a29-5e95299bab52.jsonl  852fb1f9-c45d-40c7-94be-cd6aa4bbab7e.jsonl  8942abd9-9e54-444f-a5bf-8a9666219d31.jsonl  a903598e-ffaf-4c99-acd5-04054bf5b24e.jsonl  agent-001a8ba8.jsonl  agent-00ad84ca.jsonl  agent-03b34f10.jsonl  agent-08c84c98.jsonl  agent-09572ab3.jsonl  agent-0b6e9350.jsonl  agent-0bf4c3ab.jsonl  agent-110895f0.jsonl  agent-1cd96ddb.jsonl  agent-1fd12642.jsonl  agent-22dafd67.jsonl  agent-24c0bdfe.jsonl  agent-25a02922.jsonl  agent-284af567.jsonl  agent-28cd79a0.jsonl  agent-296f026e.jsonl  agent-3c5ceeba.jsonl  agent-3dfdfc84.jsonl  agent-446e4c6c.jsonl  agent-47f77930.jsonl  agent-4991fbb9.jsonl  agent-4a0761bf.jsonl  agent-530447fe.jsonl  agent-56c18755.jsonl  agent-5766114f.jsonl  agent-5b109473.jsonl  agent-61ba1d52.jsonl  (+52 more)
FreeCAD/: README.md  box-with-tri-hole-Body.ast.stl  box-with-tri-hole-pursaslicer.3mf  box-with-tri-hole-pursaslicer_0.2mm_PLA_MK3S_39m.gcode  box-with-tri-hole.FCStd  box-with-tri-hole.stl
aux-data/: meshlab.viewstate.txt  wireframe-icon.small.b64
csgrs/: Cargo.toml  README.md  box-with-hole_segments-10_vertices-124.stl  box-with-hole_segments-11_vertices-134.stl  box-with-hole_segments-12_vertices-144.stl  box-with-hole_segments-13_vertices-154.stl  box-with-hole_segments-14_vertices-164.stl  box-with-hole_segments-15_vertices-174.stl  box-with-hole_segments-25_vertices-274.stl  box-with-hole_segments-37_vertices-394.stl  box-with-hole_segments-38_vertices-404.stl  box-with-hole_segments-3_vertices-54.stl  box-with-hole_segments-40_vertices-424.stl  box-with-hole_segments-43_vertices-454.stl  box-with-hole_segments-4_vertices-64.stl  box-with-hole_segments-50_vertices-524.stl  box-with-hole_segments-5_vertices-74.stl  box-with-hole_segments-6_vertices-84.stl  box-with-hole_segments-7_vertices-94.stl  box-with-hole_segments-8_vertices-104.stl  box-with-hole_segments-9_vertices-114.stl  box-with-tri-hole.stl
csgrs/src/: main.rs
fornjot/: Cargo.toml  README.md  box-with-hole_segments-3.stl  box-with-hole_segments-50.stl  box-with-tri-hole.stl  build.rs
fornjot/.claude/: settings.local.json
fornjot/src/: lib.rs  main.rs
