[package]
name = "box-with-hole"
version = "0.2.0"
edition = "2024"
authors = ["Wink Saville <wink@saville.com>"]

[profile.release]
incremental = false
codegen-units = 1
debug = false
lto = true
strip = true
panic = "abort"

[profile.dev]
incremental = true
codegen-units = 16

[dependencies]
#csgrs = { version = "0.20.1", features = ["parallel"] }
#csgrs = { version = "0.20.1" }
#csgrs = { path = "../csgrs" } # local path for development
#csgrs = {  git = "https://github.com/timschmidt/csgrs.git", rev = "278e0254d2c8bfffe2e9021fd8120dd9ee1f60bb" }
csgrs = {  git = "https://github.com/timschmidt/csgrs.git", branch = "main" }
