[package]
name = "box-with-tri-hole"
version = "0.1.0"
edition = "2024"

[dependencies]
fj = { path = "/home/wink/data/prgs/forks/fornjot/crates/fj" }

[profile.release]
incremental = false
codegen-units = 1
debug = false
lto = true
strip = true
panic = "abort" # Save 2.5M

[profile.dev]
incremental = true
codegen-units = 16
