[package]
name = "box-with-tri-hole"
version = "0.1.0"
edition = "2024"
authors = ["Wink Saville <wink@saville.com>"]

[profile.release]
incremental = false
codegen-units = 1
debug = false
lto = true
strip = true
panic = "abort"

[profile.dev]
incremental = true
codegen-units = 16

[dependencies]
fj = { git = "https://github.com/winksaville/fornjot", branch = "dep-box-with-tri-hole" }
#fj = { path = "/home/wink/data/prgs/forks/fornjot/crates/fj" }
